--- a/index.html
+++ b/index.html
@@ -4,27 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Boilerplate HTML, CSS, JS</title>
-    <meta name="description" content="Boilerplate para um projeto usando HTML, CSS e JS" />
+    <title>Disney Plus</title>
+    <meta name="description" content="Plataforma do disney plus" />
 
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.ico" />
 
     <!-- GOOGLE FONTS -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <!-- *currently set to "Roboto". Feel free to change it to whatever you like* -->
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- CSS STYLE LINK -->
-    <link rel="stylesheet" href="./styles/global.css" />
-    <!-- SVG SCRIPT LINK -->
-    <script src="/scripts/svg-inject.min.js"></script>
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <h1>olar mundo!</h1>
+    <div id="app">
+      <header>
+        <img src="/assets/logo.png" alt="Logo da disney"/>
+        <button type="button" class="button__menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </header>
+
+      <main>
+        <section class="movie">
+          <div class="rating">
+            <img src="/assets/logo-imdb.png" alt="Logo Imdb"/>
+            <strong></strong>
+          </div>
+
+          <span></span>
+
+          <h1></h1>
+
+          <p></p>
+
+          <button>
+            <img src="/assets/icon-play.png" alt="">
+            Watch Now
+          </button>
+        </section>
+          <aside class="films">
+            <h2>Movies</h2>
+            <div>
+              <ul id="movies__list">
+              </ul>
+            </div>
+          </aside>
+      </main>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
