--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
   </head>
   <body>
     <div id="app">
+      <div class="app__image">
+        <img
+          loading="lazy"
+          alt="Imagem do filme destaque"
+          src="https://image.tmdb.org/t/p/original/620hnMVLu6RSZW6a5rwO8gqpt0t.jpg"
+        />
+      </div>
+
       <header>
-        <img src="/assets/logo.png" alt="Logo da disney"/>
-        <button type="button" class="button__menu">
+        <img src="/assets/logo.png" alt="Logo da disney plus" />
+
+        <button  type="button" class="button__menu" onclick="changeButtonMenu()">
           <span></span>
           <span></span>
           <span></span>
@@ -31,33 +40,37 @@
       </header>
 
       <main>
-        <section class="movie">
+        <section class="feature__movie">
           <div class="rating">
-            <img src="/assets/logo-imdb.png" alt="Logo Imdb"/>
+            <img src="/assets/logo-imdb.png" alt="Logo da IMDB" />
             <strong></strong>
           </div>
 
+          <!-- DATA DE LANÇAMENTO, CATEGORIA -->
           <span></span>
-
+          <!-- TITULO DO FILME -->
           <h1></h1>
-
+          <!-- SINOPSE DO FILME -->
           <p></p>
 
           <button>
-            <img src="/assets/icon-play.png" alt="">
+            <img src="/assets/icon-play.png" alt="Icon play">
             Watch Now
           </button>
         </section>
-          <aside class="films">
-            <h2>Movies</h2>
-            <div>
-              <ul id="movies__list">
-              </ul>
-            </div>
-          </aside>
+
+        <aside class="films">
+          <h2>Movies</h2>
+
+          <div>
+            <ul id="movies__list">
+            </ul>
+          </div>
+        </aside>
       </main>
     </div>
 
     <script src="./scripts/index.js"></script>
   </body>
 </html>
+
