feat: update peformance improvements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <header>
         <img src="/assets/logo.png" alt="Logo da disney plus" />
 
-        <button  type="button" class="button__menu" onclick="changeButtonMenu()">
+        <button type="button" class="button__menu">
           <span></span>
           <span></span>
           <span></span>
@@ -59,7 +59,7 @@
           </button>
         </section>
 
-        <aside class="films">
+        <aside class="movies">
           <h2>Movies</h2>
 
           <div>
@@ -73,4 +73,3 @@
     <script src="./scripts/index.js"></script>
   </body>
 </html>
-
