feat: performance improvements and side menu creation

--- a/index.html
+++ b/index.html
@@ -32,11 +32,19 @@
       <header>
         <img src="/assets/logo.png" alt="Logo da disney plus" />
 
-        <button type="button" class="button__menu">
+        <button type="button" class="button__menu" onclick="changeButtonMenu()">
           <span></span>
           <span></span>
           <span></span>
         </button>
+
+        <nav class="navigation">
+          <h2>Movies</h2>
+
+          <ul id="movies">
+
+          </ul>
+        </nav>
       </header>
 
       <main>
@@ -53,20 +61,12 @@
           <!-- SINOPSE DO FILME -->
           <p></p>
 
-          <button>
+          <button type="button">
             <img src="/assets/icon-play.png" alt="Icon play">
-            Watch Now
+            Assistir agora
           </button>
         </section>
 
-        <aside class="movies">
-          <h2>Movies</h2>
-
-          <div>
-            <ul id="movies__list">
-            </ul>
-          </div>
-        </aside>
       </main>
     </div>
 
