--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
           <span></span>
         </button>
 
-        <nav class="navigation">
+        <nav class="navigation active">
           <h2>Movies</h2>
+
+          <form class="form" id="add__movie">
+            <input type="text" placeholder="Adicione o seu filme" name="movie" value="https://www.imdb.com/title/tt0800369/" />
+
+            <button type="submit">
+              +
+            </button>
+          </form>
 
           <ul id="movies">
 
