feat: add responsiveness and improvements in the index section

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <span></span>
         </button>
 
-        <nav class="navigation active">
+        <nav class="navigation">
           <h2>Movies</h2>
 
           <form class="form" id="add__movie">
-            <input type="text" placeholder="Adicione o seu filme" name="movie" value="https://www.imdb.com/title/tt0800369/" />
+            <input type="text" placeholder="Adicione o seu filme" name="movie" />
 
             <button type="submit">
               +
